packages refactor