@@ -1,27 +1,29 @@
-package com.example.cristina.calcolproject;
+package tests;
+
+import junit.framework.Assert;
 
 import org.junit.Test;
 
 import java.util.ArrayList;
 
-import static org.junit.Assert.assertEquals;
+import calcolproject.espressione.Espressione;
 
 public class EspressioneUnitTest {
 
     @Test
     public void testEspressioneClassica1() {
-        ArrayList<String> as= new ArrayList<>();
+        ArrayList<String> as = new ArrayList<>();
 
         as.add("10");
 
         Espressione e = Espressione.creaClassica(as);
 
-        assertEquals(e.execute() , new Double(10.0));
+        Assert.assertEquals(e.execute(), Double.valueOf(10.0));
     }
 
     @Test
     public void testEspressioneClassica2() {
-        ArrayList<String> as= new ArrayList<>();
+        ArrayList<String> as = new ArrayList<>();
 
         as.add("10");
         as.add("+");
@@ -29,12 +31,12 @@ public class EspressioneUnitTest {
 
         Espressione e = Espressione.creaClassica(as);
 
-        assertEquals(e.execute() , new Double(20.0));
+        Assert.assertEquals(e.execute(), Double.valueOf(20.0));
     }
 
     @Test
     public void testEspressioneClassica3() {
-        ArrayList<String> as= new ArrayList<>();
+        ArrayList<String> as = new ArrayList<>();
 
         as.add("1");
         as.add("+");
@@ -44,12 +46,12 @@ public class EspressioneUnitTest {
 
         Espressione e = Espressione.creaClassica(as);
 
-        assertEquals(e.execute() , new Double(0.0));
+        Assert.assertEquals(e.execute(), Double.valueOf(0.0));
     }
 
     @Test
     public void testEspressioneClassica4() {
-        ArrayList<String> as= new ArrayList<>();
+        ArrayList<String> as = new ArrayList<>();
 
         as.add("1");
         as.add("*");
@@ -59,12 +61,12 @@ public class EspressioneUnitTest {
 
         Espressione e = Espressione.creaClassica(as);
 
-        assertEquals(e.execute() , new Double(2.0/3.0));
+        Assert.assertEquals(e.execute(), Double.valueOf(2.0 / 3.0));
     }
 
     @Test
     public void testEspressioneRPN1() {
-        ArrayList<String> as= new ArrayList<>();
+        ArrayList<String> as = new ArrayList<>();
 
         as.add("1");
         as.add("2");
@@ -72,12 +74,12 @@ public class EspressioneUnitTest {
 
         Espressione e = Espressione.creaRPN(as);
 
-        assertEquals(e.execute() , new Double(3.0));
+        Assert.assertEquals(e.execute(), Double.valueOf(3.0));
     }
 
     @Test
     public void testEspressioneRPN2() {
-        ArrayList<String> as= new ArrayList<>();
+        ArrayList<String> as = new ArrayList<>();
 
         as.add("1");
         as.add("2");
@@ -85,12 +87,12 @@ public class EspressioneUnitTest {
 
         Espressione e = Espressione.creaRPN(as);
 
-        assertEquals(e.execute() , new Double(2.0));
+        Assert.assertEquals(e.execute(), Double.valueOf(2.0));
     }
 
     @Test
     public void testEspressioneRPN3() {
-        ArrayList<String> as= new ArrayList<>();
+        ArrayList<String> as = new ArrayList<>();
 
         as.add("3");
         as.add("2");
@@ -102,7 +104,7 @@ public class EspressioneUnitTest {
 
         Espressione e = Espressione.creaRPN(as);
 
-        assertEquals(e.execute() , new Double(-6.0));
+        Assert.assertEquals(e.execute(), Double.valueOf(-6.0));
     }
 
 }
